--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,20 @@ body{
   gap: 20px;
   margin-top: 50px;
 }
+.question{
+  color: #e8e8e8;
+  font-size: 20px;
+  cursor: pointer;
+}
+.answer{
+  color: #e8e8e8;
+  opacity: .5;
+  font-size: 18px;
+  display: none;
+}
+.faq-check{
+  display: block;
+}
 
 @media (max-width:874px){
   .card-wrapper{
